# pycategoric

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/categoric/: cli.py
src/categoric/commons/: config.py  console.py  constant.py  db.py  http.py  logging.py  openobserve.py  serialization.py  system.py
