[project]
name = "categoric"
version = "0.6.0"
description = "Namespace reserved for categoric.dev and shared helper functions"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "typer>=0.24.1",
]
authors = [{ name = "categoric-dev" }]
license = { text = "Apache License Version 2.0" }
readme = "README.md"

[project.scripts]
categoric = "categoric.cli:app"

[tool.uv.build-backend]
module-name = "categoric"
namespace = true

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.mypy]
mypy_path ="src"
packages = ["categoric"]
ignore_missing_imports = false
strict = true
